--- a/Personlige mapper/Aleksander/stuff/worksheet.tex
+++ b/Personlige mapper/Aleksander/stuff/worksheet.tex
@@ -12,24 +12,24 @@
 \input{thesisstatement.tex}
 \input{method.tex}
 \chapter{Theory}
-\label{theory}
+\label{chap:theory}
 \input{IntroductionTheory.tex}
 \input{BinPackingComplexity.tex}
 \input{BinPackingProblem.tex}
 \chapter{Design}
-\label{design}
+\label{chap:design}
 \input{IntroductionDesign.tex}
 \input{specificationrequirement.tex}
 \input{targetgroupanalysis.tex}
 \input{programplanning.tex}
-\chapter{Development}
-\label{chap:development}
-\chapter{Testing}
-\label{testing}
-\chapter{Discussion}
-\label{discussion}
-\chapter{Conclusion}
-\label{conclusion}
+%\chapter{Development}
+%\label{chap:development}
+%\chapter{Testing}
+%\label{chap:testing}
+%\chapter{Discussion}
+%\label{chap:discussion}
+%\chapter{Conclusion}
+%\label{chap:conclusion}
 \begingroup
 	\raggedright
 	\bibliography{BibTeX/sources}	% Litteraturlisten
