--- a/LaTeX/Klar til at blive rettet af andre/Solutionsuggestions.tex
+++ b/LaTeX/Klar til at blive rettet af andre/Solutionsuggestions.tex
@@ -1,11 +1,11 @@
-/section{Solution suggestions}
-In this section will be discussed different solutions to the problem about packing a suitcase. There will be explained each solution and the difficulties and benefits of the solutions. At the last subsection a solution will be selected and the choice explained. The solutions have been chosen from the mind map that can be seen in appendix ?.
-/newline
-/subsection{Application for smartphones}
-This idea is making an application that helps the user pack one or more suitcases. The user will need to put in the height, length, depth, weight and a name of the items to pack. The application will then calculate if all the items can be packed and there. All of these calculations means the application need to get a server to make the calculations. This means the customer will need internet on the phone to be able to use the program. At the last step the application will show the user where to place each item. This means that the customer will have easy access to the program everywhere he/she brings her smartphone when there are access to the internet. On the other hand would people without a smartphone not be able to use the program. This solution requires learning how to write applications for smartphones in C# and therefore does this solution require modification of the time schedule. This solution is easy to bring everywhere because you rarely leave you phone. On the other hand would people without a smartphone not be able to use the program. Also there are needed to set aside extra time for learning how to write C# programs for a smartphone.
-/newline
-/subsection{Extension for an existing program}
-A second solution could be to make an extension for another program that already exists. This extension should add the missing functions of the original program. I could either be an extension to the many packing lists. In that case the program should be able to use the info from the lists to calculate how to best pack all the items and afterwards show how to pack them. Another solution could be an extension could be to the e-Commerce Shipping calculator. This extension should be able to also pack smaller items like a suitcase and not a container. A problem with making an extension for another program is if the other program is written in a programming language not able to work with a program written I C#. Another problem is testing the program if the other program is not open source because the company’s permission is then needed. In that case it is needed to get permission from the company to use the code from their program to make the extension. And this testing is important to be sure the programs are able to work together as planned. On the other hand is it possible to make a program more specific on what there are missing in the other program and therefore cover more of the important features that are missing. So this solution would need the company’s permission to use their code for testing if it is not open source, and it would have to be determined if the program would be able to work together with an extension written in C#. The solution would be able to cover more of the problem since the existing program would already have some of the features needed and the extension could cover even more.
-/newline
-/subsection{Program for the computer}
-A third solution could be to make a program for the computer. The user will need to supply the program with the same info as on the Smartphone, and the program will then calculate it all the items can be packed and where in the suitcase. After the calculation the program will show step by step where to put all the items. This will be by showing where the individual items need to be on a 2D or 3D figure of the suitcase. Making a program for the computer means the customer will need to bring his computer on the trip if he wants to use it on-the-road, but it will not need internet since the computer is strong enough to make all the calculation on its own. This solution requires some learning time if the display figure of the suitcase should be in 3D and this should be taken into account in the time schedule. A program for the computer will not meet the same problems as the extension regarding testing since no other code other that the program are needed to test it. This solution does is easier to test than the extension and it do not need internet to work, but on the other hand do the customer need to bring the computer if he/she wants to use it on-the-road.  
+\section{Solution suggestions} 	
+This section will focus on different solutions to the problem about packing a suitcase. Each solutions difficulties and benefits will be explained. At the last subsection a solution will be selected and the choice explained. The solutions have been chosen from the mind map that can be seen in appendix ?.
+\newline
+\subsection{Application for smartphones}
+This idea is to make an application that helps the user pack one or more suitcases. The user will need to put in the height, length, depth, weight and a name of the items to pack. The application will then calculate if all the items can be packed. All of these calculations means the application needs to get a server to make the calculations. This requires the customer have internet on the phone to be able to use the program. At the last step the application will show the user where to place each item. This means that the customer will have easy access to the program everywhere he/she brings her smartphone as long as it has access to the internet. On the other hand people without a smartphone would not be able to use the program. This solution requires learning how to write applications for smartphones in C# and therefore this solution requires modification to the time schedule. This solution is easy to bring everywhere because you rarely leave your phone. On the other hand people without a smartphone would not be able to use the program. Also extra time would have to set aside to learn how to write C# programs for a smartphone.
+\newline
+\subsection{Extension for an existing program}
+A second solution could be to make an extension for another program that already exists. This extension should add the missing functions of the original program. It could either be an extension to the many packing lists. In that case the program should be able to use the information from the lists to calculate how to most efficiently pack all the items and afterwards show how to pack them. Another solution could be an extension to the e-Commerce Shipping calculator. This extension should be able to also pack smaller items like a suitcase and not a container. A problem with making an extension for another program is if the other program is written in a programming language not able to work with a program written in C#. Another problem is testing the program if the other program is not open source because the company's permission is needed. In that case it is needed to get permission from the company to use the code from their program to make the extension. And this testing is important to be sure the programs are able to work together as planned. On the other hand it is possible to make a program that focus more specifically on what is missing in the other program and therefore cover more of the important features. So this solution would need the company’s permission to make use of their code for testing if it is not open source, and it would have to be determined if the program would be able to work together with an extension written in C#. The solution would be able to cover more of the problem since the existing program would already have some of the features needed and the extension could cover even more.
+\newline
+\subsection{Program for the computer}
+A third solution could be to make a program for the computer. The user will need to supply the program with the height, length, depth, weight and a name of the items to pack, and the program will then calculate if all the items can be packed and where in the suitcase. After the calculation the program will show step by step where to put all the items. This will be by showing where the individual items need to be on a 2D or 3D figure of the suitcase. Making a program for the computer means the customer will need to bring his computer on the trip if he wants to use it on-the-road, but it will not need internet since the computer is strong enough to make all the calculation on its own. This solution requires some time to learn 3D editing if the display figure of the suitcase should be in 3D and this should be taken into account in the time schedule.  This solution makes it is easy to test as the code will be self written and it does not need internet to work, but on the other hand the customer needs to bring the computer if he/she wants to use it on-the-road.  
