--- a/trunk/LaTeX/Klar til at blive rettet af andre/Solutionsuggestions.tex
+++ b/trunk/LaTeX/Klar til at blive rettet af andre/Solutionsuggestions.tex
@@ -9,3 +9,5 @@ A second solution could be to make an extension for another program that already
 \newline
 \subsection{Program for the computer}
 A third solution could be to make a program for the computer. The user will need to supply the program with the height, length, depth, weight and a name of the items to pack, and the program will then calculate if all the items can be packed and where in the suitcase. After the calculation the program will show step by step where to put all the items. This will be by showing where the individual items need to be on a 2D or 3D figure of the suitcase. Making a program for the computer means the customer will need to bring his computer on the trip if he wants to use it on-the-road, but it will not need internet since the computer is strong enough to make all the calculation on its own. This solution requires some time to learn 3D editing if the display figure of the suitcase should be in 3D and this should be taken into account in the time schedule.  This solution makes it is easy to test as the code will be self written and it does not need internet to work, but on the other hand the customer needs to bring the computer if he/she wants to use it on-the-road.  
+\newline
+\subsection{Choise of solution}
