--- a/Personlige mapper/Aleksander/stuff/programplanning.tex
+++ b/Personlige mapper/Aleksander/stuff/programplanning.tex
@@ -1,14 +1,18 @@
 \section{Program planing}
-This section is to plan how the program should work and the flow of the program. The flow of the program will be described and shown in a flowchart to give an overview of the whole program. A flowchart is a useful tool when programming because it explains the structure of the program that can be used when programming.
+This section is to plan how the program should work and describe the flow of the program. The program will be described in a flowchart to give an overview of the whole program. A flowchart is a useful tool when programming because it explains the structure of the program.
 
-To give a more precise explanation of a program the flowchart can be formed into a pseudocode which is a level above real code. Pseudocode is used as a schematic for the program and thereby giving some foresight into any problems that can be encountered when writing the actual code. Thus planing ahead and designing the program so it gives the minimum amount of code errors and unexpected problems.
-The program planing will be used to make it easier to develop the program and help to a better process of making the program.
+To give a more precise explanation of a program the flowchart can be formed into a pseudocode which is a level above real code. Pseudocode is used as a schematic for the program and thereby give some foresight into any problems that can be encountered when writing the actual code. Thus planing ahead and designing the program so a minimum amount of code errors and unexpected problems occurs.
+The program planing will be used to make it easier to develop the program and help make a better product in terms of structure.
 
-When the program starts, it should check the database and see if there is any items stored. If there is no items stored it should ask the user to input the items that should be packed. If there are recorded item in the database, the program should ask the user if it is the right items and if there is new items to be added. The new added items will then be saved in the database.
+When the program starts, it should first ask for the bags dimensions. The user then have to decide whether to use a pre made list, reuse a list from earlier use or create a new list containing objects that should be packed. If the user decide to a make new list the program will ask the user for items that should be stored in the new list. Should the new list be empty the program will inform the user that the list that were just made is empty and ask if the user still wishes to saved it in the database.
+If the user chooses to use a pre made settings the program will fetched the list from the database and ask if the list contains the desired items, if not then it will allow the user to add or remove items from that list.
 
-The program shall then preform the algorithms to place the items in the most efficient way regarding volume and weight. If the program can not fit the items in one bag it should try the second bag if there is any. If the program reach the point where all items have been packed it should inform the user that the process was a success and how the user have to pack the bags. If the program does not complete the process and there are no bags left, the program should inform the user that process was incomplete. Then the program should be at the end where the user can choose to add more items, see the exiting item, see the order of packing and close the program.
+The program then preforms the algorithms to place the items in the most efficient way regarding volume and weight. The program will also check that the bags does not exceed the weight and volume limits when travelling by flight.
+When the program successfully place an item, the item will be marked as packed. If the program can not fit the item in any of the accessible bags the item will be marked as not packable. If the program reach the point where all items have gone through the process, it should then inform the user that the process is done and inform how the user have to pack the bags and report if there were any items that could not be packed.
+At the end of the program the user can choose to add more items, see the exiting item, see the order of packing and close the program.
 
 \figur{0.9}{flowchart.JPG}{This is the flowchart of the program (not quiet finished yet)}{fig:flow}
 
 Thereby the general structure of the program have been formed and can be describe by a flowchart, see on figure: \ref{fig:flow}.
+The arrows shows the direction of the flow in the program. Some of the arrows also have small labels indicating what answer there were to the decision.
 This flowchart can then be used as a schematic for the developing of the program and thereby a better structure of the program can be archived.
