--- a/trunk/Personlige mapper/Aleksander/stuff/BibTeX/sources.bib
+++ b/trunk/Personlige mapper/Aleksander/stuff/BibTeX/sources.bib
@@ -1,4 +1,4 @@
-% This file was created with JabRef 2.7.2.
+% This file was created with JabRef 2.7.
 % Encoding: Cp1252
 
 @BOOK{combopt,
@@ -89,6 +89,13 @@
   owner = {Aleksander},
   timestamp = {2012.02.16},
   url = {http://www.dsb.dk/kundeservice/service-i-toget/bagage/}
+}
+
+@ARTICLE{three-dim-pack,
+  author = {Erick Dube  AND Leon R. Kanavathy},
+  title = {Optimizing three-dimensional bin packing through simulation},
+  owner = {Christian},
+  timestamp = {2012.03.21}
 }
 
 @MISC{Why_rules,
