--- a/trunk/Personlige mapper/Aleksander/stuff/worksheet.tex
+++ b/trunk/Personlige mapper/Aleksander/stuff/worksheet.tex
@@ -13,13 +13,13 @@
 \input{method.tex}
 \chapter{Theory}
 \label{chap:theory}
-\input{IntroductionTheory.tex}
+\input{Introductiontheory.tex}
 \input{BinPackingComplexity.tex}
 \input{BinPackingProblem.tex}
 \chapter{Design}
 \label{chap:design}
-\input{IntroductionDesign.tex}
-\input{specificationrequirement.tex}
+\input{Introductiondesign.tex}
+\input{Specificationrequirement.tex}
 \input{targetgroupanalysis.tex}
 \input{programplanning.tex}
 %\chapter{Development}
