--- a/trunk/LaTeX/Undervejs/Specificationrequirement - niels.tex
+++ b/trunk/LaTeX/Undervejs/Specificationrequirement - niels.tex
@@ -3,6 +3,18 @@
 Through the problem analysis it has been documented that there are some strict rules regarding some forms of public transportation when going on vacation. Based on this research a list of features have been composed, that the program must for fill to meet the base requirement to help the user.
 Furthermore another list have also been made composed of some additional features that would make the program better and more user friendly. They are not needed for the base requirement, but rather as an improvements to further make the program ideal for the user.
 
+For the user to better get starting on the program there will be a guide. That give a explaining of how to use program in a little text that is short enough that the user will read it, but which enough information that the user can use the program.
+The program itself need have a few features that is a must in the program. The program need make sure that weight is evenly distribute in the bags and make sure that the weight do not exceed the bags weigh limit, but it also need to distribute the space of the bags to make sure that the program do not fill a bag more then there is physical room for.
+Then the user is on the trip the program need to have a function to edit the list over item that are in the bag so if the user buy souvenir or want to throw something away they do not need.
+To help the user to see where to put the different items in the bags. The program need a function that help the user to see where the items are in luggage to better help packing and for better know what to take with the program need a list over different trips types that can help the user with packing the luggage for the certain type of trip.
+%The program should be able to handle to pack a number of bags so the items that are places evenly in them to make sure that the bags weigh and space are as close to be the same.
+The rules for luggage that is the size of the bag and the weigh that the luggage maximum can have need to be in the program so it can say if the luggage the maximum weigh or size.
+
+
+then there is some features that there might be in the program or are for future versions on the program. Do so the program can handle change shapes of an item like a T-shirt, that can be pack im many shapes beside a box. This mean that to program can handle like solid, liquid and bendable shapes. but this may not be in the program at the start since this might hard to get into the program.
+The program can have a function that is a list of trips types, since there can be certain items for a certain trip type. But since the difference are minimum this function are not plan for at the first version of the program.
+the final function that may not be in the first version of the program is a function that can try to save space for all souvenirs the user might buy on the trip, so he or she do not need to check if there is room for the souvenir in that bag before buying it, this way the user do not need to determine which to take home and which to leave behind.
+
 \subsection{Targeted Features}
 These are the essential features that the program will have.\newline
 
@@ -34,6 +46,10 @@ When the user asks the program if an item will fit in the suitcase, the program 
 To make it easier for the user to know what will be packed an editable lists will be included depending on the type of trip.
 \newline
 
+\textbf{Number of people}
+Usually a trip is done with more then one person, so more suitcases might be available to distribute items between.
+\newline
+
 \subsection{Optional Features}
 These features as mentioned above, are additional features that might be able to be implemented later if possible.\newline
 
@@ -43,10 +59,6 @@ The program will also take in account that items might be bendable, and therefor
 
 \textbf{Type of trip}
 Depending on the nature of the trip different packing lists will be necessary because each trip might require different items.
-\newline
-
-\textbf{Number of people}
-Usually a trip is done with more then one person, so more suitcases might be available to distribute items between.
 \newline
 
 \textbf{Account for the trips length}:
