--- a/trunk/LaTeX/Skal sættes i rapport/solutiononthemarked.tex
+++ b/trunk/LaTeX/Skal sættes i rapport/solutiononthemarked.tex
@@ -9,16 +9,16 @@ First a look into these lists and guides and the more advance solution thereafte
 
 \subsection{App - Packing Pro}
 
-Packing pro is an app developed for the Iphone and Ipad that offers templates for check lists to the customer. Iphone is a smart phone and the brand is owned by Apple. Packing Pro uses a touch interface which means that the user by using the finger can navigate around. This is possible because Iphone and Ipad support touch navigation.
+Packing pro is an app developed for the Iphone and Ipad that offers templates for check lists to the customer. Packing Pro uses a touch interface which means that the user by using the finger can navigate around.
 
 \figur{0.8}{Iphone.JPG}{Picture of 2 of Packing Pros menus from \citep{ipack}}{fig:ipack}
 
-Packing pro is designed with a panel in the bottom of the screen that allows the user navigate through the menus. Packing Pro provides the user with a help menu that contain information on how to use the app. There is also a menu in where the user can charge color theme of the app. On figure: \ref{fig:ipack} can an example of how a check list could look like.
+Packing pro is designed with a panel in the bottom of the screen that allows the user navigate through the menus. Packing Pro provides the user with a help menu that contain information on how to use the app. On figure: \ref{fig:ipack} can an example of how a check list could look like.
 
 These templates are designed to different purposes regarding the customer, gender, type of trip, and purpose of the trip.
-The customer can then load the wanted template for the purpose. The user also have the possibility to create their own lists by adding things that should be remembered for the trip by them self. The user also have possibility to select an existing list and delete the objects that were found irrelevant by the user. The user can then check object on the lists off as it get packed. Packing Pro is a management tool that helps the customer get an overview of all the things to remember. As the name implies(pro) the app have to be bought before it can be used  \citep{packingpro}.
+The customer can then load the wanted template for the purpose. The user also have the possibility to create their own lists by adding things that should be remembered for the trip by them self. And to select an existing list and delete the objects that were found irrelevant by the user. The user can then check object on the lists off as it get packed. Packing Pro is a management tool that helps the customer get an overview of all the things to remember. As the name implies(pro) the app have to be bought before it can be used  \citep{packingpro}.
 
-Packing Pro works as check list and help the user remember what to pack, but it does not preform any organization of luggages content itself. So Packing Pro itself does not solve the described problem but helps the user remembering what to pack. So a feature to use from this program is the check list function that gives the user an overview of things to pack.
+Packing Pro works as check list and help the user remember what to pack, but it does not preform any organization of luggages content itself. So Packing Pro itself does not solve the described problem but helps the user remembering what to pack. So a feature to consider from this program is the check list function that gives the user an overview of things to pack.
 A function that would not be needed is the compatible with Iphone/Ipad operating system. It would be nice if the program made work cross platforms but it is still not required to solve the problem.
 
 \subsection{App - Checkmark Packlist}
@@ -45,7 +45,7 @@ The online check/tip list in itself does not give the customer a solution to the
 
 \subsection{The e-Commerce shipping calculator}
 
-The e-Commerce shipping calculator is an advanced program that helps the customer packing large containers and calculates the price of the shipment.
+The e-Commerce shipping calculator is an advanced program that helps the customer pack large containers and calculates the price of the shipment.
 By typing the size, weight, location, and destination of the items that should be shipped, the program can calculate what the prize is going to be and generates a 3D(3 dimensional) model of the container where the given items are placed in the best possible way so there are a minimum of wasted space. On their website \citep{solvingmaze} they offer a demo(demonstration) of their program. Their demo runs through the web browser and thereby should be accessible from computers connected to the internet.
 The demo is design to have the containers dimension variables and weight limit as input fields. Under the container is there are list of item where each item can have different dimensions and weights. To right of these field is the 3d model placed that will be generated.
 
