--- a/LaTeX/Undervejs/Specificationrequirement.tex
+++ b/LaTeX/Undervejs/Specificationrequirement.tex
@@ -3,11 +3,11 @@
 Through the problem analysis it has been documented that there are some strict rules regarding some forms of public transportation when going on vacation. Based on this research a list of features have been composed, that the program must for fill to meet the base requirement to help the user.
 Furthermore another list have also been made composed of some additional features that would make the program better and more user friendly. They are not needed for the base requirement, but rather as an improvements to further make the program ideal for the user.
 
-For the user to better get starting on the program there will be a guide. That give a explaining of how to use program in a little text that is short enough that the user will read it, but which enough information that the user can use the program.
-The program itself need have a few features that is a must in the program. The program need make sure that weight is evenly distribute in the bags and make sure that the weight do not exceed the bags weigh limit, but it also need to distribute the space of the bags to make sure that the program do not fill a bag more then there is physical room for.
+For the user to better get starting on the program there will be a guide that come with the program. That give a explaining on how to use program in a text that is short enough that the user will read it all, but which enough information that the user can use the program.
+Since the project description claim that the program language need to be in C#. Which is the reason that the program will be written in C#.
+The program itself need have a few features that is needed in the program for it to solve the problem that is focus this project. First one is that program need make sure that weight is evenly distribute in the bags and make sure that the weight do not exceed the bags weigh limit, but it also need to distribute the space of the bags to make sure that the program do not fill a bag more then there is physical room for.
 Then the user is on the trip the program need to have a function to edit the list over item that are in the bag so if the user buy souvenir or want to throw something away they do not need.
 To help the user to see where to put the different items in the bags. The program need a function that help the user to see where the items are in luggage to better help packing and for better know what to take with the program need a list over different trips types that can help the user with packing the luggage for the certain type of trip.
-%The program should be able to handle to pack a number of bags so the items that are places evenly in them to make sure that the bags weigh and space are as close to be the same.
 The rules for luggage that is the size of the bag and the weigh that the luggage maximum can have need to be in the program so it can say if the luggage the maximum weigh or size.
 
 
@@ -17,6 +17,9 @@ the final function that may not be in the first version of the program is a func
 
 \subsection{Targeted Features}
 These are the essential features that the program will have.\newline
+
+\textbf{program language is C#}:
+The program need to written in C# since the requirements for this project is that the program need to written in C#.
 
 \textbf{Guide the user}:
 The program will have a little "readme" file, or other form of guide, that will tell the customer how to use the program.
@@ -31,7 +34,7 @@ The program also needs to distribute the items by space. The whole idea of the p
 \newline
 
 \textbf{On the road}:
-The program will be able to tell you, while you are on the trip, if there is enough space for a souvenirs, if you input the dimensions and weight of that item.
+The program will be able to tell you, while you are on the trip, if there is enough space for a souvenirs, if you input the dimensions and weight of that item. And if you what to remove a item from your luggage the it can this as well.
 \newline
 
 \textbf{Baggage rules}:
