--- a/LaTeX/Skal sættes i rapport/solutiononthemarked.tex
+++ b/LaTeX/Skal sættes i rapport/solutiononthemarked.tex
@@ -67,7 +67,7 @@ The e-Commerce shipping calculator is the one solution with the most wanted feat
 \begin{center}
 \begin{tabular}{c  c | c | c | c | c | c}
 \textbf{Included in product} &  \rotatebox{90}{\textbf{Solutions}} &\rotatebox{90}{App - Packing / Packing Pro} & \rotatebox{90}{App - Checkmark Packlist}& \rotatebox{90}{Online check/tip list}&\rotatebox{90}{The e-Commerce shipping calculator}\\ \hline
-Guide the user & & x & x & x & x   \\ \hline
+Guide the user* & & x & x & x & x   \\ \hline
 Distribute weight &  &   &   &   & x    \\ \hline
 Distribute space  &  &   &   &   & x    \\ \hline
 On the road   &  &  x  &  x  &   &  x  \\ \hline
@@ -77,7 +77,8 @@ Packing list &  & x & x &   & x    \\ \hline
 
 \end{tabular}
 \end{center}
-\caption{ Table for the different products on the market compared to features}
+\caption{ Table for the different products on the market compared to features\\
+*The program should be able to guide the user through the different steps of the program}
 \label{tab:OtherPrograms}
 \end{table}
 
