--- a/LaTeX/Skal sættes i rapport/Luggage rules.tex
+++ b/LaTeX/Skal sættes i rapport/Luggage rules.tex
@@ -1,7 +1,7 @@
 \section{Luggage rules}
 This section will focus on the general rules regarding luggage when going abroad, whether by plane, train or cruise ship.
 \subsection{Luggage table}
-This section will include a table which displays the various limits for luggage in different public transportations. First column is the type of luggage, second column is the limit to the luggages dimensions and thirdly is the limit to the weight of the luggage. This means, when packing luggage for a trip, the suitcase should not exceed these limitations. Further explanation will be given in the related subsections.
+This section will contain a table which displays the various limits for luggage in different public transportations. The table will be used to give a general overview of the different limits for luggage for different types of transportations.
 \begin{table}[H]
 \begin{tabular}{| l | r | r |}
 \hline
@@ -20,7 +20,7 @@ Depending on how much is paid on extra luggage different dimension and weight li
 \end{table}
 
 \subsection{Charter trips on air planes}
-Given below is the rules for varies items you could bring on a plane.
+Given below is the various restrictions when travelling by plane.
 
 \subsubsection{Checked-in luggage}
 Check-in luggage is the luggage that will go in the planes cargo hold.
