--- a/LaTeX/Klar til at blive rettet af andre/Solutionsuggestions.tex
+++ b/LaTeX/Klar til at blive rettet af andre/Solutionsuggestions.tex
@@ -11,4 +11,4 @@ A second solution could be to make an extension for another program that already
 A third solution could be to make a program for the computer. The user will need to supply the program with the height, length, depth, weight and a name of the items to pack, and the program will then calculate if all the items can be packed and where in the suitcase. After the calculation the program will show step by step where to put all the items. This will be by showing where the individual items need to be on a 2D or 3D figure of the suitcase. Making a program for the computer means the customer will need to bring his computer on the trip if he wants to use it on-the-road, but it will not need internet since the computer is strong enough to make all the calculation on its own. This solution requires some time to learn 3D editing if the display figure of the suitcase should be in 3D and this should be taken into account in the time schedule.  This solution makes it is easy to test as the code will be self written and it does not need internet to work, but on the other hand the customer needs to bring the computer if he/she wants to use it on-the-road.  
 \newline
 \subsection{Choise of solution}
-When understanding the three solutions it is possible to determine, which of the solutions best solve the described problem. To determine which solution is the best to solve the problem, it is necessary to look at the different solutions compared to the criterions. The first criterion is that the program needs to be written in C#. This is possible in all three solutions but in the extension for another program is it needed to make sure, if the other program is written in another language, that the two languages can work together.
+When understanding the three solutions it is possible to determine, which of the solutions best solve the described problem. To determine the best solution it is needed to look at the pros and cons of each solution. The pro about the first solution is that it is easy to bring the program with you, since you almost always bring your phone. The cons are that you will need internet to use the program and this can be expensive on a vacation, and that there will need time to the learning of how to write applications to smartphones. The pro about the extension for another program is that since some code is already written there is more time to be more specific in what the original program is missing. On the other hand can it be a problem if the original program is written in a programming language that is not good at working together with a program written in C#. It is also a problem if the original program is not open source, because the company who own the program then need to give permission to use their code. If the original program is not open source can it be a problem to get this permission without long negotiation with the company. The last solution is a program for the computer. A pro about this solution is that it does not need internet to run since the computer is strong enough to make the calculation on its own. Another pro is that since no code from others is needed there is no problem about different programming languages needing to work together. It is also easier to make the program exactly as needed since it is starting from scratch. A con is that some people do not want to bring their computer on a trip and can therefore not use the program while away. So when looking at all the solutions is chosen the last solution about a program for the computer since it is the solution with the most pros and fewest cons. Also there are not needed a lot more time to learn more, which means there are more time to make the program and there is time enough to make it to the deadline. 
